--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ smart system for monitoring and improving sleep health.</p>
             <div class="container mx-auto max-w-2xl text-center reveal">
                 <h2 class="text-4xl font-bold text-white mb-4">Get In Touch</h2>
                 <p class="text-gray-300 mb-8">Have a project in mind or just want to say hello? My inbox is always open.</p>
-                <a href="mailto:hello@alexdoe.com" class="inline-block bg-indigo-600 hover:bg-indigo-500 text-white font-semibold py-3 px-8 rounded-lg text-lg transition-transform transform hover:scale-105 duration-300 shadow-[0_0_20px_rgba(99,102,241,0.5)]">
+                <a href="natarajm9876@gmail.com" class="inline-block bg-indigo-600 hover:bg-indigo-500 text-white font-semibold py-3 px-8 rounded-lg text-lg transition-transform transform hover:scale-105 duration-300 shadow-[0_0_20px_rgba(99,102,241,0.5)]">
                     natarajm9876@gmail.com
                 </a>
             </div>
@@ -357,4 +357,5 @@ smart system for monitoring and improving sleep health.</p>
     </script>
 </body>
 </html>
+
 
